--- a/src/app/address-add-card.css
+++ b/src/app/address-add-card.css
@@ -12,3 +12,17 @@
     margin-right: 31px;
 }
 
+.icon-customize-copy {
+    font-size: 12px;
+    color: #4285F4;
+    margin-left: 8px;
+    cursor: pointer;
+}
+
+.last-item {
+    margin-bottom: 15px;
+}
+
+.not-copy {
+    margin-right: 17px;
+}
